--- a/src/app/home/search/search.component.sass
+++ b/src/app/home/search/search.component.sass
@@ -2,3 +2,17 @@
     margin-left: 400px
     margin-right: 400px
 
+.search-result li 
+  border-bottom: 1px solid gray
+  border-left: 1px solid gray
+  border-right: 1px solid gray
+  width: 600px
+  height: 30px
+  padding: 5px
+  background-color: white
+  cursor: pointer
+  list-style-type: none
+
+
+.search-result li:hover 
+  background-color: #607D8B
