--- a/src/app/home/search/search.component.html
+++ b/src/app/home/search/search.component.html
@@ -6,56 +6,59 @@
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Last Name</label>
                 <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3">
+                    <input type="text" #searchBox class="form-control" id="inputEmail3" [formControl]='LastName' autocomplete="off"  [matAutocomplete]="LastNameauto" >
+                      <mat-autocomplete #LastNameauto="matAutocomplete">
+                        <mat-option *ngFor = 'let lexis of LexisNexisDataLastName$ | async' [value]="lexis.LastName">
+                          {{lexis.LastName}}
+                        </mat-option>
+                      </mat-autocomplete>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">Middle Name</label>
                 <div class="col-sm-10">
-                    <input class="form-control" id="inputPassword3">
+                    <input class="form-control" id="inputPassword3" autocomplete="off">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">First Name</label>
                 <div class="col-sm-10">
-                    <input class="form-control" id="inputPassword3">
+                    <input class="form-control" id="inputPassword3" autocomplete="off">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword3" class="col-sm-2 col-form-label" >NPI</label>
-                <div class="col-sm-10">
-                    <input #searchBox class="form-control" id="inputPassword3" [formControl]='NPI' (keyUp)="search(searchBox.value)">
-                    <ul class="search-result">
-                        <li *ngFor="let Lexis of LexisNexisData | async" >
-                          <a routerLink="/home/GoldenRecord/{{Lexis.NPI}}">
-                            {{hero.name}}
-                          </a>
-                        </li>
-                      </ul>
+                <div class="col-sm-10">  
+                    <input matInput class="form-control" id="inputPassword3" [formControl]='NPI' [matAutocomplete]="NPIauto" autocomplete="off">
+                    <mat-autocomplete #NPIauto="matAutocomplete">
+                        <mat-option *ngFor = 'let lexis of LexisNexisData' [value]="lexis.NPI">
+                          {{lexis.NPI}}
+                        </mat-option>
+                      </mat-autocomplete>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">DOB</label>
                 <div class="col-sm-10">
-                    <input class="form-control" id="inputPassword3">
+                    <input class="form-control" id="inputPassword3" autocomplete="off">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">Specialty</label>
                 <div class="col-sm-10">
-                    <input class="form-control" id="inputPassword3">
+                    <input class="form-control" id="inputPassword3" autocomplete="off">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">Billing Address</label>
                 <div class="col-sm-10">
-                    <input class="form-control" id="inputPassword3">
+                    <input class="form-control" id="inputPassword3" autocomplete="off">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">Zip Code</label>
                 <div class="col-sm-10">
-                    <input class="form-control" id="inputPassword3">
+                    <input class="form-control" id="inputPassword3" autocomplete="off">
                 </div>
             </div>
 
