--- a/src/app/home/search/search.component.html
+++ b/src/app/home/search/search.component.html
@@ -6,7 +6,7 @@
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Last Name</label>
                 <div class="col-sm-10">
-                    <input type="text" #searchBox class="form-control" id="inputEmail3" [formControl]='LastName' autocomplete="off"  [matAutocomplete]="LastNameauto" >
+                    <input type="text" class="form-control" id="inputEmail3" [formControl]='LastName' autocomplete="off"  [matAutocomplete]="LastNameauto" >
                       <mat-autocomplete #LastNameauto="matAutocomplete">
                         <mat-option *ngFor = 'let lexis of LexisNexisDataLastName$ | async' [value]="lexis.LastName">
                           {{lexis.LastName}}
@@ -23,7 +23,12 @@
             <div class="form-group row">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">First Name</label>
                 <div class="col-sm-10">
-                    <input class="form-control" id="inputPassword3" autocomplete="off">
+                    <input class="form-control"  autocomplete="off" [formControl]='FirstName' [matAutocomplete]="FirstNameauto">
+                    <mat-autocomplete #FirstNameauto="matAutocomplete">
+                        <mat-option *ngFor = 'let lexis of LexisNexisDataFirstName$ | async' [value]="lexis.FirstName" >
+                          {{lexis.FirstName}}
+                        </mat-option>
+                      </mat-autocomplete>
                 </div>
             </div>
             <div class="form-group row">
